# Todo-App

./: .gitignore  .gitmodules  CMakeLists.txt  prebuild.lua
Application/: CMakeLists.txt  prebuild.lua
Application/src/: tdpch.h
Application/src/Application/Core/: Application.cpp  Application.h  Core.h  Log.cpp  Log.h
Application/src/Application/Database/: DatabaseManager.cpp  DatabaseManager.h
Application/src/Application/Routes/: Route.cpp  Routes.h
